# stoken-demo

./: .gitignore  Cargo.toml  README.md  astro.config.mjs  initialize.js  package-lock.json  package.json
.github/workflows/: deploy.yml
.stellar/: upgrade_check.json
.stellar/contract-ids/: asset.json  stoken.json
.stellar/identity/: alice.toml  authority.toml  dime.toml  manager.toml  processor.toml  recipient1.toml  recipient2.toml
contracts/asset/: Cargo.toml
contracts/asset/src/: asset.rs  lib.rs  test.rs
contracts/stoken/: Cargo.toml
contracts/stoken/src/: constants.rs  errors.rs  keys.rs  lib.rs  stoken.rs  storage.rs  test.rs  types.rs  utils.rs
src/: stellar-wallets-kit.ts
src/components/: ConnectWallet.astro  Deposit.astro  FulfillWithdrawal.astro  Mint.astro  ProcessDeposit.astro  Withdraw.astro  WithdrawRequest.astro
src/contracts/: asset.ts  stoken.ts  util.ts
src/layouts/: Layout.astro
src/pages/: index.astro
