[workspace]
resolver = "2"
members = [
  "contracts/*",
]

[workspace.dependencies]
stellar-tokens = { git = "https://github.com/OpenZeppelin/stellar-contracts", package = "stellar-tokens", rev = "bbebb17f165300e1eae9d2ce2dc469f4ffc1e2d2" }
stellar-access = { git = "https://github.com/OpenZeppelin/stellar-contracts", package = "stellar-access", rev = "bbebb17f165300e1eae9d2ce2dc469f4ffc1e2d2" }
stellar-contract-utils = { git = "https://github.com/OpenZeppelin/stellar-contracts", package = "stellar-contract-utils", rev = "bbebb17f165300e1eae9d2ce2dc469f4ffc1e2d2" }
stellar-macros = { git = "https://github.com/OpenZeppelin/stellar-contracts", package = "stellar-macros", rev = "bbebb17f165300e1eae9d2ce2dc469f4ffc1e2d2" }
soroban-sdk = "22.0.0"

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

# For more information about this profile see https://soroban.stellar.org/docs/basic-tutorials/logging#cargotoml-profile
[profile.release-with-logs]
inherits = "release"
debug-assertions = true
